# unique_device_identifier

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: unique_device_identifier.podspec
ios/Classes/: UniqueDeviceIdentifierPlugin.swift
lib/: unique_device_identifier.dart  unique_device_identifier_method_channel.dart  unique_device_identifier_platform_interface.dart
lib/web/: browser_finger_print.dart  navigator_interop.dart  unique_device_identifier_web.dart  uuid_util.dart  window_interop.dart
linux/: CMakeLists.txt  unique_device_identifier_plugin.cc  unique_device_identifier_plugin_private.h
linux/include/unique_device_identifier/: unique_device_identifier_plugin.h
linux/test/: unique_device_identifier_plugin_test.cc
macos/: unique_device_identifier.podspec
macos/Classes/: UniqueDeviceIdentifierPlugin.swift
test/: unique_device_identifier_method_channel_test.dart  unique_device_identifier_test.dart
windows/: CMakeLists.txt  unique_device_identifier_plugin.cpp  unique_device_identifier_plugin.h  unique_device_identifier_plugin_c_api.cpp
windows/test/: unique_device_identifier_plugin_test.cpp
(+17 files in other folders)
